--- a/setup.yaml
+++ b/setup.yaml
@@ -9,7 +9,7 @@ pipeline {
         stage('Setup Server') {
             steps {
                 // Команди для налаштування сервера
-                sh 'sudo apt update && sudo apt install -y nginx'
+                sh 'apt update && apt install -y nginx'
             }
         }
         stage('Build') {
