--- a/render.yaml
+++ b/render.yaml
@@ -15,7 +15,7 @@ services:
     autoDeploy: true
 
 databases:
-  - name: mysql-db
+  - name: mysdb
     plan: free
     engine: mysql
     version: 8.0
