--- a/render.yaml
+++ b/render.yaml
@@ -11,9 +11,8 @@ services:
       - key: SECRET_KEY
         value: your-secret-key
       - key: DATABASE_URL
-        value: mysql://lab5:010405@mysdb.internal:3306/lab5
+        value: mysql://lab5:010405@mysdb.internal:3306/lab5  # Замінено на внутрішній хост бази даних
     autoDeploy: true
-
 databases:
   - name: mysdb
     plan: free
