--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: django-app
     env: python
     plan: free 
-    buildCommand: pip install -r requirements.txt
+    buildCommand: pip install -r labs5-6/requirements.txt
     startCommand: gunicorn your_project_name.wsgi --log-file -
     envVars:
       - key: DJANGO_SETTINGS_MODULE
